--- a/style.css
+++ b/style.css
@@ -5,3 +5,36 @@ main {
     max-width: 1200px;
     margin: 0 auto;
 }
+.hero {
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    grid-auto-rows: 400px;
+    border-bottom: 1px solid #ddd;
+}
+.hero-image {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+.info {
+    align-self: center;
+}
+.info-title {
+    color: #333;
+    font-size: 3rem;
+    font-weight: border;
+    margin-bottom: 24px;
+}
+.info-subtitle {
+    color: #333;
+    font-size: 1.5rem;
+    margin-bottom: 24px;
+}
+.info-button {
+    border: none;
+    border-radius: 20px;
+    color: #333;
+    background-color: #fb8c00;
+    font-weight: bolder;
+    padding: 12px 24px;
+}
