--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ main {
 .hero {
     display: grid;
     grid-template-columns: 2fr 3fr;
-    grid-auto-rows: 400px;
+    grid-auto-rows: 550px;
     border-bottom: 1px solid #ddd;
 }
 .hero-image {
@@ -62,4 +62,30 @@ main {
 }
 .dishes-item__big {
     grid-area: 1/1/3/3;
+}
+.menu {
+    margin-bottom: 200px;
+}
+.menu-title {
+    font-size: 2rem;
+    color: #333;
+    font-weight: bolder;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.menu-grid {
+    display: grid;
+    gap: 25px;
+    justify-content: center;
+    grid-template-columns: repeat(5, minmax(100px, 250px));
+}
+.menu-grid-item {
+    background-color: coral;
+    padding: 15px;
+    border-top-left-radius: 40px;
+}
+.menu-grid-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
