--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ main {
 }
 .hero {
     display: grid;
-    grid-template-columns: 2fr 3fr;
+    grid-template-columns: minmax(300px, 2fr) 3fr;
     grid-auto-rows: 550px;
     border-bottom: 1px solid #ddd;
 }
@@ -50,7 +50,7 @@ main {
 }
 .dishes-grid {
     display: grid;
-    grid-template-columns: repeat(4, minmax(150px, 200px));
+    grid-template-columns: repeat(auto-fit, minmax(75px, 200px));
     grid-auto-rows: 1fr;
     gap: 25px;
     justify-content: center;
@@ -77,7 +77,7 @@ main {
     display: grid;
     gap: 25px;
     justify-content: center;
-    grid-template-columns: repeat(5, minmax(100px, 250px));
+    grid-template-columns: repeat(auto-fit, 150px);
 }
 .menu-grid-item {
     background-color: coral;
@@ -88,4 +88,22 @@ main {
     width: 100%;
     height: 100%;
     object-fit: contain;
+}
+@media screen and (max-width: 768px) {
+    .hero {
+        grid-template-columns: minmax(300px, 500px);
+        justify-content: center;
+        grid-auto-rows: 350px;
+    }
+    .info-title {
+        margin-bottom: 8px;
+    }
+    .hero-image {
+        width: 80%;
+        height: 80%;
+        object-fit: scale-down;
+    }
+    .dishes-grid {
+        grid-template-columns: repeat(auto-fit, minmax(75px, 100px));
+    }
 }
